# ndmanager-plugins

./: CMakeLists.txt  README.md  depends
ndmanager-plugins/: CMakeLists.txt  changelog-ndmanager-plugins.txt  makefile
ndmanager-plugins/descriptions/: makefile  ndm_clean.xml  ndm_concatenate.xml  ndm_extractleds.xml  ndm_mergedat.xml  ndm_nev2evt.xml  ndm_pca.xml  ndm_resample.xml  ndm_smr2dat.xml  ndm_start.xml  ndm_transcodevideo.xml
ndmanager-plugins/matlab/: CMakeLists.txt  makefile  spots2pos.docbook  spots2pos.m
ndmanager-plugins/package/: description-pak  mkpackage  mktarball  store  version
ndmanager-plugins/python/: makefile
ndmanager-plugins/python/ndm_checkconsistency/: CMakeLists.txt  header.py  makefile  ndm_checkconsistency.docbook  ndm_checkconsistency_kde4.desktop
ndmanager-plugins/python/ndm_prepare/: CMakeLists.txt  header.py  makefile  ndm_prepare_kde3.desktop  ndm_prepare_kde4.desktop
ndmanager-plugins/scripts/: CMakeLists.txt  cnt.docbook  duration  duration.docbook  makefile  ndm_clean  ndm_concatenate  ndm_extractleds  ndm_extractspikes  ndm_functions  ndm_lfp  ndm_mergedat  ndm_pca  ndm_resample  ndm_smi2sts  ndm_smr2evt  ndm_start  ndm_start.docbook  ndm_transcodevideo  pad.docbook  process_renameevents_SPWR  process_reorderclusters.docbook  rn  rn.docbook
ndmanager-plugins/src/: CMakeLists.txt  makefile
ndmanager-plugins/src/process/: CMakeLists.txt  makefile
ndmanager-plugins/src/process_extractchannels/: CMakeLists.txt  makefile  process_extractchannels.cpp  process_extractchannels.docbook
ndmanager-plugins/src/process_extractchannels/unused/: process_extractchannels_tuned
ndmanager-plugins/src/process_extractleds/: CMakeLists.txt  makefile  process_extractleds.c
ndmanager-plugins/src/process_extractleds/ffmpeg-0.cvs20070307/: .depend  config.err  config.h  config.mak  ffplay.c  libavcodec-uninstalled.pc  libavcodec.pc  libavformat-uninstalled.pc  libavformat.pc  libavutil-uninstalled.pc  libavutil.pc  libswscale-uninstalled.pc  libswscale.pc  version.h
ndmanager-plugins/src/process_extractspikes/: CMakeLists.txt  makefile  process_extractspikes.cpp  process_extractspikes.docbook  process_extractspikes.h
ndmanager-plugins/src/process_medianfilter/: CMakeLists.txt  makefile  process_medianfilter.docbook
ndmanager-plugins/src/process_medianthreshold/: CMakeLists.txt  makefile  process_medianthreshold.cpp  process_medianthreshold.docbook  process_medianthreshold.h
ndmanager-plugins/src/process_merge/: CMakeLists.txt  makefile
ndmanager-plugins/src/process_nlxconvert/: CMakeLists.txt  customtypes.h  makefile  ncsfile.h  ncsfilecollection.h  nevfile.h  nlxerror.h  process_nlxconvert.cpp  process_nlxconvert.docbook  smifile.h  smifilecollection.cpp
ndmanager-plugins/src/process_nlxconvert/html/: classNCSFile-members.html  classNCSFile.html  classNCSFileCollection__coll__graph.map  classNCSFileCollection__coll__graph.md5  classNEVFile-members.html  classNLXExtractor__coll__graph.md5  classNVTFile-members.html  classOutputFile.html  classSMIFile-members.html  classSMIFile.html  classSMIFileCollection-members.html  classSMIFileCollection.html  customtypes_8h-source.html  functions.html  functions_enum.html  nevfile_8h-source.html  nlxerror_8h-source.html  outputfile_8h-source.html  tree.html
ndmanager-plugins/src/process_pca/: CMakeLists.txt  makefile  process_pca.cpp  process_pca.docbook  process_pca.h
ndmanager-plugins/src/process_removeartefacts/: CMakeLists.txt  makefile  process_removeartefacts.cpp  process_removeartefacts.docbook
ndmanager-plugins/src/process_resample/: CMakeLists.txt  makefile  process_resample.c
ndmanager-plugins/src/process_resample/libsamplerate-0.1.8/: config.status
ndmanager-plugins/src/process_smrconvert/: CMakeLists.txt  makefile  process_smrconvert.cpp  process_smrconvert.doxygen  sonadcchannels.h  sonadcmarkchannel.cpp  sonadcmarkchannel.h  sonchannelinfo.cpp  sonerror.h  soneventchannel.cpp  sonextractor.h  sonfile.cpp  sonfile.h  sonfileheader.cpp  sonfileheader.h
ndmanager-plugins/src/process_smrconvert/html/: classSONADCChannels__coll__graph.map  classSONADCMarkChannel.html  classSONADCMarkChannel__inherit__graph.md5  classSONChannel-members.html  classSONChannelInfo-members.html  classSONChannelInfo.html  classSONChannel__coll__graph.map  classSONChannel__inherit__graph.md5  classSONEventChannel-members.html  classSONEventChannel.html  classSONEventChannel__coll__graph.md5  classSONEventChannel__inherit__graph.md5  classSONExtractor.html  classSONExtractor__coll__graph.md5  classSONFile-members.html  classSONFile.html  classSONFileHeader-members.html  classSONFileHeader__coll__graph.map  classSONFile__coll__graph.md5  functions.html  graph_legend.html  (+18 more)
ndmanager-plugins/src/xpathReader/: CMakeLists.txt  makefile  xpathReader.c  xpathReader.docbook
ndmanager/src/: CMakeLists.txt  Makefile.am  Makefile.in  Template-1-tetrode-20000Hz.xml  Template-1-tetrode-32552Hz.xml  Template-16-tetrodes-20000Hz.xml  Template-16-tetrodes-32552Hz.xml  Template-2-tetrodes-20000Hz.xml  Template-2-tetrodes-32552Hz.xml  Template-3-tetrodes-20000Hz.xml  Template-3-tetrodes-32552Hz.xml  Template-4-octrodes-20000Hz.xml  Template-4-octrodes-32552Hz.xml  Template-4-tetrodes-20000Hz.xml  Template-4-tetrodes-32552Hz.xml  Template-8-octrodes-20000Hz.xml  Template-8-octrodes-32552Hz.xml  Template-8-tetrodes-20000Hz.xml  Template-8-tetrodes-32552Hz.xml  acquisitionsystemlayout.cpp  acquisitionsystemlayout.h  acquisitionsystemlayout.ui  acquisitionsystempage.cpp  acquisitionsystempage.h  anatomylayout.cpp  anatomylayout.h  anatomylayout.ui  anatomypage.cpp  anatomypage.h  channelcolors.cpp  channelcolors.h  channelcolorslayout.cpp  channelcolorslayout.h  channelcolorslayout.ui  channelcolorslayout.ui4  channelcolorspage.cpp  channelcolorspage.h  channeloffsetslayout.cpp  channeloffsetslayout.h  channeloffsetslayout.ui  (+131 more)
ndmanager/src/icons/: CMakeLists.txt  Makefile.am  Makefile.in
src/process_resample/: CMakeLists.txt  process_resample.docbook
src/process_resample/libsamplerate-0.1.8/: Makefile  libtool
(+476 files in other folders)
