project(ndmanager-plugins-src-process_resample)
cmake_minimum_required(VERSION 2.8.6)

# Build and install program
set(source process_resample.c)
set(program process_resample)
set(lsr_source "${CMAKE_CURRENT_SOURCE_DIR}/libsamplerate-0.1.8")
set(lsr_lib "${CMAKE_CURRENT_BINARY_DIR}/lsr/src/.libs/libsamplerate.a")
set(libs m ${lsr_lib})
add_custom_command(OUTPUT lsr1 COMMAND [ -d lsr ] || cp -a ${lsr_source} lsr)
add_custom_command(OUTPUT lsr2 COMMAND cd lsr && ./configure && make DEPENDS lsr1)
add_custom_target(lsr DEPENDS lsr2)
add_executable(${program} ${source})
add_dependencies(${program} lsr)
target_link_libraries(${program} ${libs})
install(TARGETS ${program} DESTINATION bin)

# Create and install man pages
set(docbooks process_resample.docbook)
file(GLOB_RECURSE files /usr/share/docbook.xsl)
foreach(file ${files})
	string(FIND ${file} manpages found)
	if (NOT found EQUAL -1)
		set(xsl ${file})
	endif()
endforeach()
set(manpages)
foreach(docbook ${docbooks})
	string(REGEX REPLACE docbook 1 manpage ${docbook})
	add_custom_command(OUTPUT ${manpage} DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}" COMMAND xsltproc ${xsl} "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}")
	add_custom_command(OUTPUT ${manpage}.gz DEPENDS ${manpage} COMMAND gzip -f ${manpage})
	list(APPEND manpages ${manpage}.gz)
	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${manpage}.gz" DESTINATION man/man1)
endforeach()
add_custom_target(man-${program} ALL DEPENDS ${manpages})
