project(ndmanager-plugins-src-process_medianthreshold)
cmake_minimum_required(VERSION 2.8.6)

# Install program
set(sources process_medianthreshold.cpp)
set(program process_medianthreshold)
add_executable(${program} ${sources})
install(TARGETS ${program} DESTINATION bin)

# Create and install man pages
set(docbooks process_medianthreshold.docbook)
file(GLOB_RECURSE files /usr/share/docbook.xsl)
foreach(file ${files})
	string(FIND ${file} manpages found)
	if (NOT found EQUAL -1)
		set(xsl ${file})
	endif()
endforeach()
set(manpages)
foreach(docbook ${docbooks})
	string(REGEX REPLACE docbook 1 manpage ${docbook})
	add_custom_command(OUTPUT ${manpage} DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}" COMMAND xsltproc ${xsl} "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}")
	add_custom_command(OUTPUT ${manpage}.gz DEPENDS ${manpage} COMMAND gzip -f ${manpage})
	list(APPEND manpages ${manpage}.gz)
	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${manpage}.gz" DESTINATION man/man1)
endforeach()
add_custom_target(man-${program} ALL DEPENDS ${manpages})
