project(ndmanager-plugins-src-process_resample)
cmake_minimum_required(VERSION 2.8.6)

# Build and install program
set(source process_resample.c)
set(program process_resample)
set(libsamplerate libsamplerate-0.1.8)
set(libpath ./libsamplerate/src/.libs)
set(lib samplerate.a)
set(libs m)
add_custom_command(OUTPUT libsamplerate1 COMMAND [ -d libsamplerate ] || cp -a "${CMAKE_CURRENT_SOURCE_DIR}/${libsamplerate}" libsamplerate)
add_custom_command(OUTPUT libsamplerate2 COMMAND cd libsamplerate && ./configure && make DEPENDS libsamplerate1)
add_custom_target(libsamplerate DEPENDS libsamplerate2)
add_executable(${program} ${source})
add_dependencies(${program} libsamplerate)
link_directories(${libpath})
target_link_libraries(${program} ${lib} ${libs})
install(TARGETS ${program} DESTINATION bin)

# Create and install man pages
set(docbooks process_resample.docbook)
find_file(xsl docbook.xsl /usr/share/apps/ksgmltools2/docbook/xsl/manpages/)
set(manpages)
foreach(docbook ${docbooks})
	string(REGEX REPLACE docbook 1 manpage ${docbook})
	add_custom_command(OUTPUT ${manpage} DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}" COMMAND xsltproc ${xsl} "${CMAKE_CURRENT_SOURCE_DIR}/${docbook}")
	add_custom_command(OUTPUT ${manpage}.gz DEPENDS ${manpage} COMMAND gzip ${manpage})
	list(APPEND manpages ${manpage}.gz)
	install(FILES "${CMAKE_CURRENT_BINARY_DIR}/${manpage}.gz" DESTINATION man/man1)
endforeach()
add_custom_target(man-${program} ALL DEPENDS ${manpages})
